4.8.1
=====
21 Jun 2025
- Refactor: decouple engine from step level annotation overrides
- Update dependencies
  - Update scala from v3.6.4 to v3.7.1
  - Update jline from v3.29.0 to v3.30.4
  - Update jansi from v2.4.1 to v2.4.2
  - Update jackson-databind from v2.18.3 to v2.19.1
  - Update pdfbox from v3.0.4 to v3.0.5

4.8.0
=====
27 May 2025
- Add implicit variable to capture the evaluated feature sequence number:
  - `gwen.feature.eval.sequenceNo`

4.7.5
=====
16 May 2025
- Fix console reporting when parallel option is ignored

4.7.4
=====
14 May 2025
- Ignore parallel option if the number of input features does not exceed one

4.7.3
=====
12 May 2025
- Fail template matches if source is not a full match

4.7.2
=====
9 May 2025
- Add support for binding capturing text from base64 encoded PDF blobs to given names

4.7.1
=====
8 May 2025
- Make line numbers in HTML reports unselectable

4.7.0
=====
8 May 2025
- Add support for capturing text from base64 encoded PDF blobs

4.6.0
=====
3 May 2025
- Add ShadowRoot to step level annotations

4.5.3
=====
26 April 2025
- Simplify how feature and meta results are handled in engine layer

4.5.2
=====
25 April 2025
- Interpolate env vars during spec normalisation
- Include results of meta imports in report output

4.5.1
=====
18 April 2025
- Update dependencies
  - Update gherkin from v32.0.0 to v32.1.1
  - Update jline from v1.5.17 to 1.5.18
  - Update commons-text from v1.13.0 to v1.13.1

4.5.0
=====
10 April 2025
- Add suppot for creating JS wrapper functions for named argument bindings

4.4.5
=====
9 April 2025
- Default `gwen.logLevel.deprecations` to `warn` instead of `error`

4.4.4
=====
7 April 2025
- Fix iteration boundary in ForEach DSL

4.4.3
=====
3 April 2025
- Introduce scoped iteration boundary to manage iteration implicits

4.4.2
=====
25 March 2025
- Validate step level annotations to ensure name casing is correct

4.4.1
=====
19 March 2025
- Only parse quoted or masked settings that have primitive values