@@ -1,6 +1,7 @@
 4.8.1
 =====
-21 Jun 2025
+24 Jun 2025
+- Allow Message annotation to be used on any step
 - Refactor: decouple engine from step level annotation overrides
 - Update dependencies
   - Update scala from v3.6.4 to v3.7.1
